changed query to param for verify email
